--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Andrew Wagnitz - A glimpse into my Mind
-email: andrew@wagnitz.com
+email: andrewrwagnitz@wagnitz.com
 description: > # A blog for people like me, Entrepreneurs
  A blog for people like me, Entrepreneurs
 baseurl: "" # the subpath of your site, e.g. /blog
